--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.link{
+  text-decoration: none;
+  color: inherit;
+}
+.write{
+    padding-top: 50px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.writeImage{
+    margin-left: 150px;
+    width: 70vw;
+    height: 300px;
+    border-radius: 10px;
+    object-fit: cover;
 }
+.writeForm{
+    position: relative;
+}
+
+.writeFormGroup{
+    margin-left: 150px;   
+    display: flex;
+    align-items: center;
+}
+
+.writeIcon{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px; 
+    color: rgb(121, 118, 118);
+    cursor: pointer;
+}
+
+.writeInput{
+    font-size: 30px;
+    border: none;
+    padding: 20px;
+    width: 70vw;
+
+}
+
+.writeInput:focus{
+    outline: none;
+}
+
+.writeText{
+   font-size: 20px; 
+   height: 70vh;
+   border: 1px solid gray;
+   border-radius: 5px;
+}
+
+.writeSubmit{
+   position: absolute; 
+   top: 20px;
+   right: 50px;
+   background-color: teal;
+   color: white;
+   padding: 10px;
+   border: none;
+   border-radius: 10px;
+   cursor: pointer;
+   font-size: 16px;
+} 
